--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Posts</h1>
+<h1>My Posts</h1>
 
 <table class="table">
   <thead>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= post.title %></td> 
         <td><%= post.body %></td>
-        <td><%= post.created_at.to_date %></td>
+        <td><%= post.created_at.strftime("%v %r") %></td>
         <td><%= link_to 'Show', post, class: 'btn btn-info' %></td>
         <% if user_signed_in? && current_user.user_type == 'admin' %>
         <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-warning' %></td>
